Refresh changing villager routes and preserve precise recovery failure evidence